<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:theme="@style/AppTheme">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleGravity="center|center_horizontal"
                app:expandedTitleMarginTop="120dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/app_name">

                <ImageView
                    android:id="@+id/profile_id"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_about"
                    android:fitsSystemWindows="true"
                    android:src="@mipmap/ic_launcher"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.3">

                    <LinearLayout
                        android:id="@+id/ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10sp"
                            android:textColor="@android:color/white"
                            android:textSize="16dp" />

                    </LinearLayout>

                </FrameLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardlayout_bg"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/btn_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@color/black"
                            android:gravity="left"
                            android:text="@string/rate_app"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="5dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/btn_share"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@color/black"
                            android:gravity="left"
                            android:text="@string/share"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="5dp"

                    >

                    <RelativeLayout
                        android:id="@+id/ll_remove_ads"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/btn_removeadds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:text="@string/remove_ad"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/price_ad_unlimited"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_toRightOf="@+id/btn_removeadds"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_arrow"
                            android:layout_width="30dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:drawableRight="@color/black"
                            android:textColor="@color/black" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/btn_feedback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@color/black"
                            android:gravity="left"
                            android:text="@string/feedback"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tv_copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_loopbots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fitsSystemWindows="true"
                    android:src="@mipmap/loopbots_logo" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/btn_more_from_us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/menu_more_from_us"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:textSize="20sp" />

</RelativeLayout>
