<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:gravity="center">

    <include
        android:id="@+id/include_actionbar"
        layout="@layout/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp" />

    <RelativeLayout
        android:id="@+id/rl_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/include_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/include_banner_ad"
        android:layout_below="@+id/include_actionbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rl_select_video"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_white_outline"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_select_video"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_video_camera" />

                <TextView
                    android:id="@+id/tv_select_video"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@+id/iv_select_video"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/capture_video"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_capture_video"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/rl_select_video"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_white_outline"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_capture_video"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_select_video" />

                <TextView
                    android:id="@+id/tv_capture_video"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@+id/iv_capture_video"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/select_video"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_extracted_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/rl_capture_video"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_white_outline"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_extracted_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_images" />

                <TextView
                    android:id="@+id/tv_extracted_image"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@+id/iv_extracted_image"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/extracted_images"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <include
        android:id="@+id/include_banner_ad"
        layout="@layout/banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>